# deks1.0

./: .gitignore  ARCHITECTURE.md  BACKEND_API.md  BEHAVIOR.md  HARDWARE.md  HARDWARE_INTERFACE.md  MEMO.md  PROTOCOLS.md  README.md  TECH_STACK.md  WIKI_HOME.md
backend/: README.md  pyproject.toml  pytest.ini  requirements.txt  run_server.py  test_chat_api.py  test_chat_nlp.py  test_database.py  test_esp32_client.py  test_improved_chat.py  test_natural_language_control.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  analytics.py  chat.py  expression.py  nlp.py  robot.py  sensors.py  websocket.py
backend/app/core/: __init__.py  config.py  error_handlers.py  exceptions.py
backend/app/database/: database_manager.py  init_db.py
backend/app/models/: error_models.py
backend/app/services/: __init__.py  analytics_service.py  chat_nlp.py  chat_service.py  connection_manager.py  conversation_context_manager.py  emotion_analyzer.py  robot_controller.py  sensor_manager.py  socket_bridge.py
backend/app/utils/: __init__.py
backend/docs/: ANALYTICS_API.md  CHAT_INTERACTION_ENHANCED.md  ERROR_HANDLING.md
backend/tests/: ERROR_TESTING_SUMMARY.md  README.md  conftest.py  test_analytics.py  test_api_integration.py  test_chat_interaction_enhanced.py  test_chat_nlp.py  test_database_manager.py  test_error_api_integration.py  test_error_handling.py  test_expression_api.py  test_robot_controller.py  test_scenarios.py  test_sensor_manager.py  test_socket_bridge.py  test_websocket_integration.py
(+17 files in other folders)
